--- a/notes/freemarket.html
+++ b/notes/freemarket.html
@@ -45,45 +45,76 @@
             <div class="content">                <section id="">
 <div class="meta">
 </div>
-<p>Теоретическая (математическая) основа рыночной экономики — <a href="https://en.wikipedia.org/wiki/Fundamental_theorems_of_welfare_economics">теоремы благосостояния</a>. В первой доказывается, что рыночное равновесие соответствует парето-оптимальному распределению благ (нельзя улучшить ничьё положение, не ухудшив положение кого-то другого), во второй — что <em>какое-то</em> парето-оптимальное распределение достижимо из любого начального. Таким образом, свободный рынок <em>автоматически</em> оптимизирует распределение ресурсов и производство так, чтобы имеющиеся ресурсы использовались максимально эффективно с точки зрения потребителя (т.е. максимизировали получаемую им полезность при заданных ограничениях). При этом, максимизируются именно <em>индивидуальные</em> и <em>субъективные</em> полезности.</p>
-<p>К сожалению, мы не можем предоставить экономических агентов своей собственной участи и просто положиться на то, что «рыночек порешает», как это было математически доказано, потому что (а) рыночная оптимизация экономики возможна только при соблюдении целого ряда явных и неявных условий, (б) рыночное решение проблемы может очень сильно не понравиться подавляющему большинству экономических агентов. Поэтому я не понимаю ни сторонников отказа от рыночной экономики, ни тех, кто считает её регулирование — отступлением от идеалов свободного рынка (как бы те к самим этим идеалам ни относились).</p>
-<p></p>
-<ol>
-<li>
-<p>Парето-оптимальность не означает справедливости, а только эффективность. Концентрация всех ресурсов в руках одного экономического агента — парето-оптимальна (ни один экономический агент не может улучшить своё положение, не ухудшив положение «монополиста») и эффективна (производственные планы формируются так, чтобы создавать максимальную полезность для этого агента). И глобального максимума <em>суммарной</em> полезности рынок сам по себе найти не сможет т.к. связан ограничением не ухудшать положение экономических агентов по сравнению с начальным. Также, максимальная скорость экономического роста или устойчивость ко внешним шокам не всегда совместимы с максимизацией полезности путём использования <em>доступных в текущий момент</em> ресурсов.</p>
-</li>
-<li>
-<p>Теоремы благосостояния предполагают, что участники рынка рациональны. Что не запрещает им хотеть странного (это учитывается функцией полезности, которая индивидуальна у каждого участника), но запрещает действовать себе во вред (т.е. выбирать решения, которые уменьшают получаемую полезность по отношению к исходному состоянию). Однако, от такого поведения, хотя и бы и просто по ошибке, избавиться нельзя. А ошибки в транзакциях — склонны накапливаться, приводя к концентрации всех ресурсов в руках одного агента (можно посмотреть на <a href="/notes/piketti2">очень простой модели</a>
+<style>
+    figcaption {
+        text-align: center;
+        line-height: 1;
+    }
+</style>
+<p>В <a href="/notes/freemarket_proof">предыдущей заметке</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
         <span class='link-meta'>
-            <span class='header'>Социальное неравенство и налоги</span>
-            <span class='description'>Социальное неравенство достаточно хорошо объясняется просто случайными флуктуациями в уровне дохода, которые, в отсутствие перераспределения, приводят к сосредоточению всех благ в руках нескольких человек. Прогрессивная налоговая шкала  эффективнее плоской в том смысле, что приводит к меньшему перераспределению благ через государство для обеспечения того же уровня неравенства.</span>
-        </span>).</p>
-<p>Эти два пункта требуют наличия механизмов <em>перераспределения</em> ресурсов. Иначе необходимо, чтобы экономические агенты проявляли альтруизм и из своих внутренних побуждений делились частью своих ресурсов. Отдельные проявления этого, конечно, есть всегда, но странно ставить их в <em>основу</em> экономической системы. Мы, сторонники свободного рынка, не можем ждать милостей от акул капитализма. Но взять их надо так, чтобы не разрушить систему стимулов к созданию ценности.</p>
+            <span class='header'>Эффективность рыночной экономики: упрощённое доказательство</span>
+            <span class='description'>Очень сжато, скучно и упрощённо о том, что, при соблюдении ряда условий, (а) рыночное равновесие соответствует парето-оптимальному распределению благ, (б) существует и (в) достижимо.</span>
+        </span> мы доказали, что рыночная экономика движется в направлении парето-оптимального распределения благ (нельзя улучшить ничьё положение, не ухудшив положение кого-то другого).Таким образом, свободный рынок <em>автоматически</em> оптимизирует распределение ресурсов и производство так, чтобы имеющиеся ресурсы использовались максимально эффективно с точки зрения потребителя (т.е. максимизировали получаемую им полезность при заданных ограничениях). При этом, максимизируются именно <em>индивидуальные</em> и <em>субъективные</em> полезности.</p>
+<p>К сожалению, мы не можем предоставить экономических агентов своей собственной участи и просто положиться на то, что «рыночек порешает», как это было математически доказано, потому что (а) рыночная оптимизация экономики возможна только при соблюдении целого ряда явных и неявных условий, (б) рыночное решение проблемы может очень сильно не понравиться подавляющему большинству экономических агентов.</p>
+<p>Рассмотрим как это следует из приведённого доказательства.</p>
+<ol>
+<li>
+<p>Мы приняли, что цены изменяются только в ответ на соотношение спроса и предложения, а производители и потребители подстраиваются под них. Т.е. экономические агенты не должны иметь возможности влиять на цены, ни поодиночке ни в сговоре. Отсюда антимонопольное законодательство, регулируемые тарифы естественных монополий и исключение крупных поставщиков из механизма формирования рыночной цены.</p>
+<p>Помимо этого, очевидно, должны отсутствовать барьеры для входа на рынок т.к. действующим на рынке компаниям может быть невыгодно расширять производство и снижать цены для максимального удовлетворения спроса: см. следующий рисунок, где точка максимума прибыли соответствует гораздо большей цене, чем точка равновесия спроса и потенциального предложения в условиях совершенной конкуренции.</p>
+<p><img src="/notes/freemarket_proof/dsp0.svg" style="width:50%"></p>
 </li>
 <li>
+<p>Совокупный спрос и предложение должны быть непрерывными функциями. Вообще, это условие не является строго обязательным т.к. можно показать, что наличие разрывов не препятствует установлению «приближённого» равновесия, эффективного с точностью до величины разрывов, однако в ряде случаев такое отклонение в точности — существенно. См. на рисунке далее часть (а), где неустранимые постоянные издержки порождают разрыв совокупного предложения, делая равновесие недостижимым. А если с ростом цены спрос будет падать ещё быстрее, то производство блага и вовсе окажется невозможным, т.к. не будет существовать точки, в которой оно рентабельно.</p>
+<p>Устранение такого разрыва возможно</p>
+<ul>
+<li>в открытой экономике за счёт экспорта излишков: кривая спроса смещается вверх за счёт внешних потребителей, растёт потенциальная прибыль при тех же ценах, и точка равновесия оказывается в разрешённой зоне (часть (б) на рисунке ниже),</li>
+<li>в открытой экономике за счёт импорта: постоянные издержки импортёров меньше, чем производителей, а для внешних экспортёров действует логика выше,</li>
+<li>за счёт субсидий производителям (поднимает кривую прибыли вверх, пока производство не станет рентабельным) или потребителям (поднимает спрос на высоких ценах).</li>
+</ul>
+<p><div style="display:flex;flex-wrap:wrap">
+  <figure style="width:45%;min-width:300px"><img src="/notes/freemarket_proof/dsp1.svg"><figcaption>(а)</figcaption></figure>
+  <figure style="width:45%;min-width:300px"><img src="/notes/freemarket_proof/dsp2.svg"><figcaption>(б)</figcaption></figure>
+</div></p>
+</li>
+<li>
+<p>Экономические агенты предполагаются рациональными в том смысле, что производители могут определить производственный план, максимизирующий прибыль, а потребители — план потребления, доставляющий им максимальную полезность. Функции полезности — индивидуальны и субъективны, так что потребителям вполне позволено <em>хотеть странного</em> и даже объективно вредного. Но — они должны понимать чего хотят и как этого достичь. Здесь мы сталкиваемся со следующей проблемой.</p>
 <p>Участники рынка должны принимать решения исходя из полной информации о предлагаемых благах. Что недостижимо в реальности. Поэтому необходимы механизмы, минимизирующие информационную асимметрию между продавцом и покупателем, а также позволяющее компенсировать ущерб от решений, принятых вследствие этой асимметрии (в идеале, приводящие распределение ресурсов к такому состоянию, которое получилось бы, имей покупатель на момент принятия решения всю ту информацию относительно блага, которую получил уже после его приобретения).</p>
+<p>Тем не менее, иногда даже такая компенсация невозможна — в случае т.н. доверительных благ, когда, начиная с некоторого уровня, невозможно достоверно определить качество предоставленного блага даже постфактум, в первую очередь сюда относятся образование и здравоохранение. Здесь необходимы механизмы внешнего контроля за добросовестностью поставщиков, лицензирование, регулирование рынка и ограничение доступа к нему.</p>
 </li>
 <li>
-<p>Экономические агенты не должны иметь возможность влиять на рыночную цену, ни поодиночке ни в сговоре. Отсюда антимонопольное законодательство, регулируемые тарифы естественных монополий и исключение крупных поставщиков из механизма формирования рыночной цены.</p>
+<p>Отсутствие транзакционных издержек. Нигде в модели нет расходов ни на определение оптимальных планов производства/потребления, ни на их перестройку. Отсюда следующие препятствия к достижению оптимальности распределения:</p>
+<ol>
+<li>У экономических агентов могут просто-напросто отсутствовать ресурсы, необходимые для перестройки потребления и/или производства. Соответственно, необходимо вмешательство в рынок, высвобождающее эти ресурсы на время, необходимое для перехода (как пример — субсидии «зелёной» энергетике и прочим электромобилям).</li>
+<li>«Желательное» состояние может оказаться менее эффективным из-за сопутствующих накладных расходов, как неотъемлемо присущих всякой человеческой деятельности, так и вызванных регуляторными требованиями. Всякое, даже благонамеренное, вмешательство в рынок сопряжено со своими издержками, которые могут оказаться выше, чем польза от предполагаемого роста эффективности. Отсюда важность качественной институциональной и регуляторной среды, минимизирующей транзакционные издержки агентов.</li>
+</ol>
+<p>Здесь же разрешается отмеченное Марксом «противоречие» между централизованным планированием внутри фирм и рыночным хаосом отношений между фирмами. Централизованное планирование заканчивается там, где его издержки плюс потери эффективности начинают превышать издержки рыночных отношений (иногда это случается даже внутри фирмы).</p>
 </li>
 <li>
-<p>Должны отсутствовать внешние эффекты экономической деятельности, т.е. вся она описывается как покупка ресурсов у поставщика, их преобразование и продажа потребителю. Однако, например, завод не покупает чистый воздух/воду/почву, которые он расходует в процессе производства, а общественный транспорт — не продаёт бизнесам услугу по доставке покупателей/рабочих, хотя и оказывает её. Это — внешние эффекты, которые могут быть сделаны объектом рыночной оптимизации только через дополнительное регулирование (налоги, субсидии и компенсации, квоты и рынок квот на выбросы и/или использование природных ресурсов...). Иначе мы оказываемся в ситуации «национализации убытков и приватизации прибыли».</p>
+<p>Вся экономическая деятельность описана как покупка ресурсов у поставщика, их преобразование и продажа потребителю. Т.е. отсутствуют т.н. «внешние эффекты» (экстерналии). Однако, например, завод не покупает чистый воздух/воду/почву, которые он расходует в процессе производства, а общественный транспорт — не продаёт бизнесам услугу по доставке покупателей/рабочих, хотя и оказывает её. Это — внешние эффекты, которые могут быть сделаны объектом рыночной оптимизации только через дополнительное регулирование (налоги, субсидии и компенсации, квоты и рынок квот на выбросы и/или использование природных ресурсов...).</p>
 </li>
 <li>
-<p>Должны отсутствовать транзакционные издержки. Более эффективное состояние экономики может оказаться недостижимым, потому что у экономических агентов отсутствуют ресурсы для перехода в него. Соответственно, необходимо вмешательство в рынок, высвобождающее эти ресурсы на время, необходимое для перехода (как пример — субсидии «зелёной» энергетике и прочим электромобилям).</p>
-<p>Другой аспект транзакционных издержек: экономическая деятельность сама по себе сопряжена с накладными расходами, поэтому теоретически более эффективные состояния могут быть нереализуемы/нежелательны из-за того, что в них эти накладные расходы будут гораздо выше (это ограничение относится не только к рыночной экономике, но и ко всякой человеческой деятельности вообще). Этот аспект рыночная экономика учитывает достаточно хорошо, но нужно его учитывать и тем, кто собирается вмешиваться в рынок административными методами: издержки регулирования могут оказаться выше, чем польза от предполагаемого роста эффективности.</p>
+<p>Полезность получаемых потребителем благ не зависит от выбора других потребителей. При наличии же «сетевых эффектов» — когда полезность блага для потребителя тем больше, чем больше других потребителей его выбирают — могут возникать <a href="https://pure.iiasa.ac.at/id/eprint/2222/">устойчивые неоптимальные состояния</a>, зависящие от случайных событий в ходе эволюции системы. Это особенно является проблемой в свете развития цифровых платформ и экосистем — рынок не может их оптимизировать без постороннего вмешательства.</p>
 </li>
 <li>
-<p>Получаемая участниками рынка полезность должна подчиняться закону убывающей отдачи. В противном случае, могут возникать <a href="https://pure.iiasa.ac.at/id/eprint/2222/">устойчивые неоптимальные состояния</a>, зависящие от случайных событий в ходе эволюции системы.</p>
-</li>
-<li>
-<p>Потребности и возможности экономических агентов должны быть постоянны во времени. Очевидно, что если они изменяются, а перестройка системы требует <a href="/notes/lightspeed">времени</a>
+<p>Доказывая достижимость рыночного равновесия мы предполагали постоянство экономической среды во времени. Но, очевидно, что и потребности и производственные возможности постоянно изменяются, а перестройка системы требует <a href="/notes/lightspeed">времени</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
         <span class='link-meta'>
             <span class='header'>О скорости света в экономике</span>
             <span class='description'>Конечная скорость распространения информации, и, следовательно, жёсткость цен — фундаментальное свойство рыночной экономики, состоящей из независимых агентов, которые координируются через близкодействующие взаимодействия. Это приводит к тому, что рыночная экономика никогда не находится в состоянии равновесия, а является средой, в которой распространяются и взаимодействуют «волны», вызванные внешними воздействиями. Поэтому её динамика существенно зависит не только от характера внешних воздействий и наложенных ограничений, но и от текущего состояния, включая «внутреннее» состояние экономических агентов. Это существенно усложняет регулирование, вплоть до того, что отложенные эффекты регулирования могут быть противоположны мгновенным, а мгновенные эффекты — противоположны желаемым. Из этого же следует неустойчивость экономики по денежному обращению: локальная избыточность/недостаточность денежной массы приводит не только к изменению уровня цен, но и к изменению объёма и структуры выпуска (вплоть до возникновения патологических самоподдерживающихся режимов). При этом, изменения, вызываемые дефицитом денежной массы, быстрее возникают, губительнее и устойчивее.</span>
-        </span> и ресурсов, то в оптимальном состоянии она может оказаться лишь случайно.</p>
+        </span> и ресурсов. Т.е. даже совершенный рынок в условиях непостоянства среды будет лишь двигаться к оптимальному распределению ресурсов, а не находиться в этом состоянии (впрочем, никакая система распределения не в состоянии непрерывно удерживать экономику в оптимуме).</p>
+<p>Проблема в том, что в процессе этого движения экономические агенты совершают неоптимальные транзакции, а в реальности — вообще все транзакции приводят к неэквивалентному обмену: одна сторона получает больше полезности от обмена, нежели другая. И на <a href="/notes/piketti2">очень простой модели</a>
+    <button class='link-meta-anchor'><strong>i</strong></button>
+    <span class='link-meta'>
+        <span class='header'>Социальное неравенство и налоги</span>
+        <span class='description'>Социальное неравенство достаточно хорошо объясняется просто случайными флуктуациями в уровне дохода, которые, в отсутствие перераспределения, приводят к сосредоточению всех благ в руках нескольких человек. Прогрессивная налоговая шкала  эффективнее плоской в том смысле, что приводит к меньшему перераспределению благ через государство для обеспечения того же уровня неравенства.</span>
+    </span> можно увидеть, что такого рода ошибки в транзакциях приводят, в конечном итоге, к концентрации всех ресурсов в руках одного агента.</p>
+</li>
+<li>
+<p>И самое печальное, что парето-оптимальность не означает справедливости, а только эффективность. Концентрация всех ресурсов в руках этого единственного агента — парето-оптимальна (ни один экономический агент не может улучшить своё положение, не ухудшив положение «монополиста») и эффективна (производственные планы формируются так, чтобы создавать максимальную полезность для этого агента). Т.е. свободный рынок <strong>не</strong> оптимизирует «суммарную» полезность потребителей, а находит такие состояния,</p>
+<p>Также, максимальная скорость экономического роста или устойчивость ко внешним шокам не всегда совместимы с максимизацией полезности путём использования <em>доступных в текущий момент</em> ресурс.</p>
+<p>Эти два пункта требуют наличия механизмов <em>перераспределения</em> ресурсов. Иначе необходимо, чтобы экономические агенты проявляли альтруизм и из своих внутренних побуждений делились частью своих ресурсов. Отдельные проявления этого, конечно, есть всегда, но странно ставить их в <em>основу</em> экономической системы. Мы, сторонники свободного рынка, не можем ждать милостей от акул капитализма. Но взять их надо так, чтобы не разрушить систему стимулов к созданию ценности.</p>
 </li>
 </ol>
 <p>Таким образом, отдавать экономику целиком и полностью в невидимые руки рынка — не стоит: то, что они с ней сделают, вам определённо не понравится. Но и отказываться от рыночных отношений просто потому, что в некоторых ситуациях рынок не может сам выйти на желаемое/оптимальное распределение ресурсов — тоже не стоит. По крайней мере, мы знаем идеальные условия, при которых рынок работает, и активно исследуем и применяем методы приближения реальных условий к идеальным. Ну и неидеальность условий не означает полного краха, а только лишь сохранение неэффективностей.</p>
