--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,11 @@
 
         <ul>
             <li>
+                <span>2025-05-14</span>
+                <a href="https://onfin.github.io/notes/money">Современное денежное обращение</a>
+                <p class=index-descr>Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег</p>
+            </li>
+            <li>
                 <span>2025-03-15</span>
                 <a href="https://onfin.github.io/notes/freemarket">Обновлено: Рыночек не порешает</a>
                 <p class=index-descr>Вывел ограничения из математического доказательства эффективности.</p>
