--- a/notes/money.html
+++ b/notes/money.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Современное денежное обращение</title>
+    <title>Современное денежное обращение (конспект)</title>
     <meta charset="utf-8" />    <link rel="canonical" href="/notes/money" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
@@ -31,7 +31,7 @@
     <main>
         <article>
             <header>
-                <h1> Современное денежное обращение </h1>
+                <h1> Современное денежное обращение (конспект) </h1>
                 <div class="meta"><p class=summary>Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег</p>
                     <p> Опубликовано: <time>2025-05-14</time> </p>
 <p>Находится в:</p>
