--- a/updates.html
+++ b/updates.html
@@ -32,7 +32,7 @@
         <ul>
             <li>
                 <span>2025-05-14</span>
-                <a href="https://onfin.github.io/notes/money">Современное денежное обращение</a>
+                <a href="https://onfin.github.io/notes/money">Современное денежное обращение (конспект)</a>
                 <p class=index-descr>Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег</p>
             </li>
             <li>
