--- a/notes/money.html
+++ b/notes/money.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />    <link rel="canonical" href="/notes/money" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
-    <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег" />        <meta name="keywords" content="экономика, макроэкономика, деньги, золотой стандарт, криптовалюта, инфляция, дефляция, спираль смерти, импорт, экспорт, ВВП, поток ресурсов, внешний долг, банковская система" />
+    <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег." />        <meta name="keywords" content="экономика, макроэкономика, деньги, золотой стандарт, криптовалюта, инфляция, дефляция, спираль смерти, импорт, экспорт, ВВП, поток ресурсов, внешний долг, банковская система" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
 <meta property="og:url" content="https://onfin.github.io/notes/money" />
 </head>
@@ -32,7 +32,7 @@
         <article>
             <header>
                 <h1> Современное денежное обращение (конспект) </h1>
-                <div class="meta"><p class=summary>Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег</p>
+                <div class="meta"><p class=summary>Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег.</p>
                     <p> Опубликовано: <time>2025-05-14</time> </p>
 <p>Находится в:</p>
                     <ul>
@@ -45,6 +45,28 @@
             <div class="content">                <section id="">
 <div class="meta">
 </div>
+<div><ul>
+<li><a href="/notes/money#_2">Сущность денег</a></li>
+<li><a href="/notes/money#_3">Отступление об экономике</a></li>
+<li><a href="/notes/money#_4">Как банки печатают и уничтожают деньги</a></li>
+<li><a href="/notes/money#_5">Роль коммерческих банков</a></li>
+<li><a href="/notes/money#_6">Монетарная динамика</a></li>
+<ul>
+<li><a href="/notes/money#_7">Уравнение обмена</a></li>
+<li><a href="/notes/money#_8">Инфляция</a></li>
+<li><a href="/notes/money#_9">Дефляция</a></li>
+</ul>
+<li><a href="/notes/money#_10">Финансовая стабильность</a></li>
+<li><a href="/notes/money#_11">Международные финансы</a></li>
+<li><a href="/notes/money#_12">Промежуточный итог: параметры монетарной системы</a></li>
+<li><a href="/notes/money#_13">Перспективы денежного обращения</a></li>
+<ul>
+<li><a href="/notes/money#_14">Частные деньги</a></li>
+<li><a href="/notes/money#_15">Криптовалюты</a></li>
+<li><a href="/notes/money#_16">Цифровые валюты центральных банков</a></li>
+</ul>
+<li><a href="/notes/money#_17">Вместо заключения</a></li>
+</ul></div>
 <section id="_2">
 <h2><a href="/notes/money#_2">Сущность денег</a></h2>
 <div class="meta">
