--- a/updates.html
+++ b/updates.html
@@ -33,7 +33,7 @@
             <li>
                 <span>2025-05-14</span>
                 <a href="https://onfin.github.io/notes/money">Современное денежное обращение (конспект)</a>
-                <p class=index-descr>Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег</p>
+                <p class=index-descr>Большой обзор современного денежного обращения: сущность современных денег, их создание и уничтожение, монетарная динамика и финансовая стабильность, международные финансы, перспективные формы денег.</p>
             </li>
             <li>
                 <span>2025-03-15</span>
